2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselectbutton.c (gimp_brush_select_button_new):
	initialize opacity, spacing and paint mode as described by the API
	docs. Fixes bug #356901.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.c: fixed blurb.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_about.c: make the About dialog transient
	to the main window and close it when the Close button is pressed.

	* plug-ins/imagemap/imap_cmd_guides.c: use a GimpHintBox.

	* plug-ins/imagemap/imap_menu.c: marked menu labels and tooltips for
	translation.

2007-01-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/images/Makefile.am
	* plug-ins/imagemap/images/stock-map-info.png
	* plug-ins/imagemap/imap_stock.[ch]: removed custom info icon.

	* plug-ins/imagemap/imap_menu.c: use GTK_STOCK_INFO instead.

	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_default_dialog.c: make dialogs transient
	to the main window and the main window transient to the image window.

2007-01-03  Tor Lillqvist  <tml@novell.com>

	* plug-ins/common/lcms.c (run): Fix mixup in retrieving the
	filename parameter.

2007-01-02  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: fixed order of parameters (pointed out
	by Yoshinori Yamakawa).

2007-01-02  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpratioentry.c: corrected API docs.

2006-12-31  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Don't include malloc.h
	file. Fixes bug #391195.

2006-12-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_synthesize_motion): restore old function and
	push a pause/resume to avoid tool redraws from the motion handler.

2006-12-30  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppropwidgets.c
	(gimp_prop_ratio_entry_notify): compile before you commit :P

2006-12-30  Simon Budig  <simon@gimp.org>
