@@ -71,16 +71,16 @@ gimp_brush_select_new (const gchar          *title,
 {
   static const GimpParamDef args[] =
   {
-    { GIMP_PDB_STRING,    "str",           "String" },
-    { GIMP_PDB_FLOAT,     "opacity",       "Opacity" },
-    { GIMP_PDB_INT32,     "spacing",       "Spacing" },
-    { GIMP_PDB_INT32,     "paint mode",    "Paint mode" },
-    { GIMP_PDB_INT32,     "mask width",    "Brush width" },
-    { GIMP_PDB_INT32,     "mask height"    "Brush heigth" },
-    { GIMP_PDB_INT32,     "mask len",      "Length of brush mask data" },
-    { GIMP_PDB_INT8ARRAY, "mask data",     "The brush mask data" },
+    { GIMP_PDB_STRING,    "str",           "String"                     },
+    { GIMP_PDB_FLOAT,     "opacity",       "Opacity"                    },
+    { GIMP_PDB_INT32,     "spacing",       "Spacing"                    },
+    { GIMP_PDB_INT32,     "paint mode",    "Paint mode"                 },
+    { GIMP_PDB_INT32,     "mask width",    "Brush width"                },
+    { GIMP_PDB_INT32,     "mask height"    "Brush heigth"               },
+    { GIMP_PDB_INT32,     "mask len",      "Length of brush mask data"  },
+    { GIMP_PDB_INT8ARRAY, "mask data",     "The brush mask data"        },
     { GIMP_PDB_INT32,     "dialog status", "If the dialog was closing "
-                                           "[0 = No, 1 = Yes]" },
+                                           "[0 = No, 1 = Yes]"          }
   };
 
   gchar *brush_callback = gimp_procedural_db_temp_name ();
@@ -88,11 +88,11 @@ gimp_brush_select_new (const gchar          *title,
   gimp_install_temp_proc (brush_callback,
                           "Temporary brush popup callback procedure",
                           "",
-                          "Andy Thomas",
-                          "Andy Thomas",
-                          "1997",
+                          "",
+                          "",
+                          "",
                           NULL,
-                          "RGB*, GRAY*",
+                          "",
                           GIMP_TEMPORARY,
                           G_N_ELEMENTS (args), 0,
                           args, NULL,
