@@ -66,14 +66,14 @@ gimp_pattern_select_new (const gchar            *title,
 {
   static const GimpParamDef args[] =
   {
-    { GIMP_PDB_STRING,   "str",           "String" },
-    { GIMP_PDB_INT32,    "mask width",    "Pattern width" },
-    { GIMP_PDB_INT32,    "mask height",   "Pattern heigth" },
-    { GIMP_PDB_INT32,    "mask bpp",      "Pattern bytes per pixel" },
+    { GIMP_PDB_STRING,   "str",           "String"                      },
+    { GIMP_PDB_INT32,    "mask width",    "Pattern width"               },
+    { GIMP_PDB_INT32,    "mask height",   "Pattern heigth"              },
+    { GIMP_PDB_INT32,    "mask bpp",      "Pattern bytes per pixel"     },
     { GIMP_PDB_INT32,    "mask len",      "Length of pattern mask data" },
-    { GIMP_PDB_INT8ARRAY,"mask data",     "The pattern mask data" },
+    { GIMP_PDB_INT8ARRAY,"mask data",     "The pattern mask data"       },
     { GIMP_PDB_INT32,    "dialog status", "If the dialog was closing "
-                                          "[0 = No, 1 = Yes]" },
+                                          "[0 = No, 1 = Yes]"           }
   };
 
   gchar *pattern_callback = gimp_procedural_db_temp_name ();
@@ -81,11 +81,11 @@ gimp_pattern_select_new (const gchar            *title,
   gimp_install_temp_proc (pattern_callback,
                           "Temporary pattern popup callback procedure",
                           "",
-                          "Andy Thomas",
-                          "Andy Thomas",
-                          "1997",
+                          "",
+                          "",
+                          "",
                           NULL,
-                          "RGB*, GRAY*",
+                          "",
                           GIMP_TEMPORARY,
                           G_N_ELEMENTS (args), 0,
                           args, NULL,
