@@ -136,11 +136,11 @@ gimp_progress_install_vtable (const GimpProgressVtable *vtable,
   gimp_install_temp_proc (progress_callback,
                           "Temporary progress callback procedure",
                           "",
-                          "Michael Natterer  <mitch@gimp.org>",
-                          "Michael Natterer",
-                          "2004",
+                          "",
+                          "",
+                          "",
                           NULL,
-                          "RGB*, GRAY*, INDEXED*",
+                          "",
                           GIMP_TEMPORARY,
                           G_N_ELEMENTS (args), G_N_ELEMENTS (values),
                           args, values,
